# r2squeeze

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: main.rs
