[package]
name = "r2squeeze"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/frectonz/r2squeeze"

[dependencies]
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
