[package]
name = "r2squeeze"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/frectonz/r2squeeze"

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
