[package]
name = "r2squeeze"
version = "0.1.5"
edition = "2024"
repository = "https://github.com/frectonz/r2squeeze"

[dependencies]
async-channel = "2.5.0"
async-compression = { version = "0.4.30", features = ["tokio", "brotli"] }
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
indicatif = "0.18.0"
sled = "0.34.7"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
